--- a/Weltraum/DU-3864366.md
+++ b/Weltraum/DU-3864366.md
@@ -1,32 +1,24 @@
 ---
-layout: page
+layout: planet
 permalink: /Weltraum/DU-3864366
 title: DU-3864366
+
+sitedata:
+    Planeten:
+        DU-3864366:
+            Name: DU-3864366
+            Typ: Erdähnlich
+            Sektor: ""
+            Monde: 3
+            Einwohner: unbekannt
+            Hauptstadt: unbekannt
+            Besiedelung: Dungeon
+            Politisches: Keine politischen Beziehungen
+
 ---
 
-
 # DU-3864366
-
 
 DU-3864366 ist ein neu entdeckter Planet und im Volksmund nur als der Dungeon-Planet bekannt, denn der gesamte Planet ist ein gigantischer Dungeon. Die Expeditionen des Handelsrates berichten von großen Gefahren, aber es sickern auch Gerüchte über gigantische Schätze durch.
 
 Um den Planeten ist eine Sperrzone eingerichtet.
-
-
-<aside>
-<table data-type="planet">
-<caption>DU-3864366</caption>
-<tbody>
-<tr><th>Typ</th><td>Erdähnlich</td></tr>
-<tr><th>Sektor</th><td> </td></tr>
-<tr><th>Monde</th><td>3</td></tr>
-<tr><th>Einwohner</th><td>unbekannt</td></tr>
-<tr><th>Hauptstadt</th><td>unbekannt</td></tr>
-<tr><th>Besiedelung</th><td>Dungeon</td></tr>
-<tr><th>Politisches</th><td>Keine politischen Beziehungen</td></tr>
-<tr><th>Erwähnungen</th><td>[DU-3864366]({{ site.baseurl }}/Search)</td></tr>
-</tbody>
-</table>
-
-</aside>
-
