--- a/_posts/2013-06-22-WepApp72.md
+++ b/_posts/2013-06-22-WepApp72.md
@@ -5,7 +5,7 @@ tag: spacepirates
 permalink: /Aktuelles/2013-06-22-WepApp72
 ---
 
-<p><img alt="" src="{{ site.baseurl }}/assets/pics/spacepirates/gallery/diverses/nrm/spapp-install.png" />Die neueste Version der SpacePirates WebApp integriert den neuesten SP:Insider SpaceSchnee und bringt für den Spielleiter eine [Konzernübersicht]({{ site.baseurl }}/Weltraum/Konzerne) mit. Zudem wurden die Zufallsgeneratoren um alle aktuellen Konzerne, Lokalitäten und Rassen erweitert.<br/>
+<p>Die neueste Version der SpacePirates WebApp integriert den neuesten SP:Insider SpaceSchnee und bringt für den Spielleiter eine [Konzernübersicht]({{ site.baseurl }}/Weltraum/Konzerne) mit. Zudem wurden die Zufallsgeneratoren um alle aktuellen Konzerne, Lokalitäten und Rassen erweitert.<br/>
 <br/>
 Seit ein paar Tagen ist die WebApp nun auch kostenlos im Opera Webstore verfügbar: [http://html5.apps.opera.com/de_de/spacepirates.html](http://html5.apps.opera.com/de_de/spacepirates.html)<br/>
 <br/>
