--- a/_posts/2016-10-16-webapp-102.md
+++ b/_posts/2016-10-16-webapp-102.md
@@ -5,7 +5,7 @@ tag: spacepirates
 permalink: /Aktuelles/2016-10-16-webapp-102
 ---
 
-<img alt="WepApp" class="floatleft" height="420" src="{{ site.baseurl }}/assets/pics/spacepirates/webapp.png" width="300"/>Die neue Version der SpacePirates WebApp bringt alle aktuellen Texte der Homepage mit. Die interaktive Sternenkarte wurde komplett überarbeitet, die Beschreibung des Weltraums wurde aktualisiert und auch das neueste Abenteuer [Blumenkind]({{ site.baseurl }}/Abenteuer/Blumenkind) wurde integriert. Auch die Zufallsgeneratoren wurden aktualisiert und haben mit einem Generator für Ereignisse während eines Raumflugs Zuwachs bekommen.
+Die neue Version der SpacePirates WebApp bringt alle aktuellen Texte der Homepage mit. Die interaktive Sternenkarte wurde komplett überarbeitet, die Beschreibung des Weltraums wurde aktualisiert und auch das neueste Abenteuer [Blumenkind]({{ site.baseurl }}/Abenteuer/Blumenkind) wurde integriert. Auch die Zufallsgeneratoren wurden aktualisiert und haben mit einem Generator für Ereignisse während eines Raumflugs Zuwachs bekommen.
 
 **[&raquo; zur WebApp]({{ site.baseurl }}/Webapp)**
 
