--- a/_posts/2012-12-30-HTMLApp55.md
+++ b/_posts/2012-12-30-HTMLApp55.md
@@ -6,7 +6,7 @@ permalink: /Aktuelles/2012-12-30-HTMLApp55
 ---
 
 
-<p><img alt="" src="{{ site.baseurl }}/assets/pics/spacepirates/gallery/diverses/tn2/spapp-sternenkarte.png" />Die neueste Version der SpacePirates App bringt jetzt auch die [interaktive Sternenkarte]({{ site.baseurl }}/Spacepirates/Karte) auf Smartphones und Tablets. Zudem wurde die NSC-Datenbank aktualisiert und die Suche verbessert.<br/>
+<p>Die neueste Version der SpacePirates App bringt jetzt auch die [interaktive Sternenkarte]({{ site.baseurl }}/Spacepirates/Karte) auf Smartphones und Tablets. Zudem wurde die NSC-Datenbank aktualisiert und die Suche verbessert.<br/>
 <br/>
 **[zur HTML5 App]({{ site.baseurl }}/Webapp/Index.html)**</p>
 
