--- a/_posts/2013-01-14-HTMLApp60.md
+++ b/_posts/2013-01-14-HTMLApp60.md
@@ -6,7 +6,7 @@ permalink: /Aktuelles/2013-01-14-HTMLApp60
 ---
 
 
-<p><img alt="" src="{{ site.baseurl }}/assets/pics/spacepirates/webapp-small.png" />Die neueste Version der SpacePirates App bietet nun eine überarbeitete Benutzeroberfläche mit Tabs, zur noch komfortableren Verwendung der App. Auch die interaktive Sternenkarte öffnet sich nun in einem eigenen Tab und nicht mehr in einem unpraktischem Popup.<br/>
+<p>Die neueste Version der SpacePirates App bietet nun eine überarbeitete Benutzeroberfläche mit Tabs, zur noch komfortableren Verwendung der App. Auch die interaktive Sternenkarte öffnet sich nun in einem eigenen Tab und nicht mehr in einem unpraktischem Popup.<br/>
 <br/>
 Zudem wurde die Suche nochmals verbessert und das Update unter Firefox verbessert. Im übrigen unterstützt Firefox 18 nun auch den [Firefox Marketplace](https://marketplace.firefox.com/app/spacepirates/) über den die App installiert werden kann.<br/>
 <br/>
