--- a/_posts/2013-02-11-WebApp62.md
+++ b/_posts/2013-02-11-WebApp62.md
@@ -6,7 +6,7 @@ permalink: /Aktuelles/2013-02-11-WebApp62
 ---
 
 
-<p><img alt="" src="{{ site.baseurl }}/assets/pics/spacepirates/webapp-small.png" />Die neueste Version der SpacePirates App fixt einige Bugs, bringt Schönheitskorrekturen und unterstützt nun auch das neue Seitenformat des iPhone 5.<br/>
+<p>Die neueste Version der SpacePirates App fixt einige Bugs, bringt Schönheitskorrekturen und unterstützt nun auch das neue Seitenformat des iPhone 5.<br/>
 <br/>
 Der Bereich Tools wurde in Zufallsgeneratoren umbenannt und die Texte des gerade entstehenden SP:Insiders SpaceRocker sind hinzugekommen.<br/>
 <br/>
