--- a/_posts/2013-05-20-WebApp7.md
+++ b/_posts/2013-05-20-WebApp7.md
@@ -6,7 +6,7 @@ permalink: /Aktuelles/2013-05-20-WebApp7
 ---
 
 
-<p><img alt="" src="{{ site.baseurl }}/assets/pics/spacepirates/gallery/diverses/nrm/spapp-install.png" />Die neueste Version der SpacePirates App kann jetzt unter Firefox und Chrome direkt installiert werden. Zudem wurden einige kleinere Bugs gefixt.<br/>
+<p>Die neueste Version der SpacePirates App kann jetzt unter Firefox und Chrome direkt installiert werden. Zudem wurden einige kleinere Bugs gefixt.<br/>
 <br/>
 **[zur WebApp]({{ site.baseurl }}/Webapp/Index.html)**</p>
 
