--- a/_posts/2013-07-18-WebApp74.md
+++ b/_posts/2013-07-18-WebApp74.md
@@ -6,7 +6,7 @@ permalink: /Aktuelles/2013-07-18-WebApp74
 ---
 
 
-<p><img alt="" src="{{ site.baseurl }}/assets/pics/spacepirates/gallery/diverses/nrm/spapp-install.png" />Die neueste Version der SpacePirates WebApp beseitigt einen ärgerlichen Fehler mit den eingebundenen Bildern. Zudem wurde die NSC-Übersicht besser verlinkt.<br/>
+<p>Die neueste Version der SpacePirates WebApp beseitigt einen ärgerlichen Fehler mit den eingebundenen Bildern. Zudem wurde die NSC-Übersicht besser verlinkt.<br/>
 <br/>
 **[zur WebApp]({{ site.baseurl }}/Webapp/Index.html)**</p>
 
