--- a/_posts/2014-02-05-WebApp91.md
+++ b/_posts/2014-02-05-WebApp91.md
@@ -9,7 +9,7 @@ permalink: /Aktuelles/2014-02-05-WebApp91
 
 Die neueste Version der SpacePirates WebApp integriert die neuesten Inhalte und bringt einen kleineren Bugfix mit.
 
-- Zufallstabelle [Auswirkungen von Weltraumphänomenen]({{ site.baseurl }}/Weltraum/Phaenomene/Index) integriert
+- Zufallstabelle [Auswirkungen von Weltraumphänomenen]({{ site.baseurl }}/Weltraum/Weltraumphänomene/Index) integriert
 - Update auf [jcAPP 4.1 Beta]({{ site.baseurl }}/Jcgames/Software/Jcapp_changelog)
 
 **[zur WebApp]({{ site.baseurl }}/Webapp)**
