--- a/Weltraum/Sektoren/D0/DU-3864366.md
+++ b/Weltraum/Sektoren/D0/DU-3864366.md
@@ -1,6 +1,6 @@
 ---
 layout: planet
-permalink: /Weltraum/DU-3864366
+permalink: /Weltraum/Sektoren/D0/DU-3864366
 title: DU-3864366
 
 sitedata:
@@ -8,7 +8,7 @@ sitedata:
         DU-3864366:
             Name: DU-3864366
             Typ: Erdähnlich
-            Sektor: ""
+            Sektor: "Sektor D0"
             Monde: 3
             Einwohner: ""
             Hauptstadt: ""
