--- a/collections/_posts/2010-05-20-DerWegzur10.md
+++ b/collections/_posts/2010-05-20-DerWegzur10.md
@@ -5,6 +5,4 @@ tag: SpacePirates
 permalink: /Aktuelles/2010-05-20-DerWegzur10
 ---
 
-Der Weg zur 1.0 ist hart und steinig. Hilf mit, dass ihn SpacePirates bis Oktober diesen Jahres gehen kann! Wie erfährst du auf der Statusseite und auch im passenden [Forumsthread](http:/tanelorn.net/.php/topic,55360.0.html).
-
-
+Der Weg zur 1.0 ist hart und steinig. Hilf mit, dass ihn SpacePirates bis Oktober diesen Jahres gehen kann! Wie erfährst du auf der Statusseite und auch im passenden [Forumsthread](http://tanelorn.net/.php/topic,55360.0.html).
