--- a/collections/_posts/2015-02-03-10Dinge.md
+++ b/collections/_posts/2015-02-03-10Dinge.md
@@ -5,7 +5,7 @@ tag: SpacePirates
 permalink: /Aktuelles/2015-02-03-10Dinge
 ---
 
-[10 Dinge](https:/greifenklaue.wordpress.com/2015/02/01/rsp-blog-karneval-10-dinge-eroffnung-und-einladung/) ist das Thema des aktuellen Karnevals der Rollenspielblogs. Ich hab es mir nicht nehmen lassen mich daran zu beteiligen und habe schnell zwei Zufallstabellen zusammengebastelt.
+[10 Dinge](https://greifenklaue.wordpress.com/2015/02/01/rsp-blog-karneval-10-dinge-eroffnung-und-einladung/) ist das Thema des aktuellen Karnevals der Rollenspielblogs. Ich hab es mir nicht nehmen lassen mich daran zu beteiligen und habe schnell zwei Zufallstabellen zusammengebastelt.
 
 - W10 Eigenschaften von KIs
 - W10 Fehlfunktionen von Geräten
