--- a/collections/_posts/2012-11-10-eBook.md
+++ b/collections/_posts/2012-11-10-eBook.md
@@ -5,4 +5,4 @@ tag: SpacePirates
 permalink: /Aktuelles/2012-11-10-eBook
 ---
 
-Das SpacePirates Grundregelwerk ist ab sofort auch als eBook verfügbar. Das eBook wurde aus dem Inhalt des Wikis erstellt und entspricht daher nicht 1 zu 1 dem druckfertigen PDF. Als Format für das eBook habe ich EPUB 3.0 gewählt. Es steht, wie die PDFs, unter der CreativeCommons Lizenz [Namensnennung-NichtKommerziell-KeineBearbeitung 3.0 Deutschland](http:/creativecommons.org/licenses/by-nc-nd/3.0/de/).
+Das SpacePirates Grundregelwerk ist ab sofort auch als eBook verfügbar. Das eBook wurde aus dem Inhalt des Wikis erstellt und entspricht daher nicht 1 zu 1 dem druckfertigen PDF. Als Format für das eBook habe ich EPUB 3.0 gewählt. Es steht, wie die PDFs, unter der CreativeCommons Lizenz [Namensnennung-NichtKommerziell-KeineBearbeitung 3.0 Deutschland](http://creativecommons.org/licenses/by-nc-nd/3.0/de/).
