--- a/collections/_posts/2011-10-07-NeuePDFs.md
+++ b/collections/_posts/2011-10-07-NeuePDFs.md
@@ -5,4 +5,4 @@ tag: SpacePirates
 permalink: /Aktuelles/2011-10-07-NeuePDFs
 ---
 
-Im [Downloadbereich]({{ site.baseurl }}/Publikationen/) gibt es neue PDFs. Zur Sternenkarte wurden die Planeten aus den Themenhefen hinzugefügt und auch die Lesbarkeit der Beschriftung wurde verbessert. Das Preview zum kommenden Atlanter vs Spaceamazonen Themenheft wurde aktualisiert und das erste Preview zum nächsten Themenheft Banden, Verbrecher und Promis wurde online gestellt.
+Im [Downloadbereich]({{ site.baseurl }}/Publikationen/) gibt es neue PDFs. Zur Sternenkarte wurden die Planeten aus den Themenhefen hinzugefügt und auch die Lesbarkeit der Beschriftung wurde verbessert. Das Preview zum kommenden Atlanter vs SpaceAmazonen Themenheft wurde aktualisiert und das erste Preview zum nächsten Themenheft Banden, Verbrecher und Promis wurde online gestellt.
